# DrinkYourWater

./: .cursorignore  .gitignore  Cargo.toml  README.md  justfile
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: workspace.yml
apps/discord/: Cargo.toml  README.md
apps/discord/src/: database.rs  logging.rs  main.rs  registry.rs  reminder.rs
apps/discord/src/buttons/: mod.rs  register_buttons.rs
apps/discord/src/commands/: add_msg.rs  list_msg.rs  mod.rs  register.rs  remove_msg.rs  unregister.rs
apps/discord/src/data/: messages.rs  tradbloup
apps/discord/src/helpers/: content.rs  mod.rs
