[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Altaks"]
license = "MIT"

[workspace]
resolver = "3"
members = ["apps/discord"]

[workspace.dependencies]
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "collector"]}
thiserror = { version = "2.0.12" }
chrono = { version = "0.4.41" }
tokio = { version = "1.47.0", features = ["full"]}
tokio_schedule = { version = "0.3.2" }
dotenvy = { version = "0.15.7" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"
