[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Altaks"]
license = "MIT"

[workspace]
resolver = "3"
members = ["apps/discord"]

[workspace.dependencies]
serenity = { version = "0.12.5", features = [
    "client",
    "gateway",
    "model",
    "collector",
] }

thiserror = { version = "2.0.18" }
anyhow = "1.0.100"

chrono = { version = "0.4.43" }

tokio = { version = "1.49.0", features = ["full"] }
tokio_schedule = { version = "0.3.2" }

dotenvy = { version = "0.15.7" }

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
console-subscriber = "0.4.1"

rand = "0.10.0"

rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

[workspace.lints.clippy]
result_large_err = "allow"
