[package]
name = "discord"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serenity = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tokio_schedule = { workspace = true }
