[package]
name = "discord"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async and tasks
tokio = { workspace = true }
tokio_schedule = { workspace = true }

# Discord API
serenity = { workspace = true }

# Error management
thiserror = { workspace = true }
anyhow = "1.0"

# Duration and time handling
chrono = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Random Handling
rand = { workspace = true }

# Logging system
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

[lints]
workspace = true
