[package]
name = "discord"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async and tasks
tokio = { workspace = true }
tokio_schedule = { workspace = true }

# Discord API
serenity = { workspace = true }

# Error management
thiserror = { workspace = true }
anyhow = { workspace = true }

# Duration and time handling
chrono = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Random Handling
rand = { workspace = true }

# Logging system
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console-subscriber = { workspace = true }

# Database
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }

[lints]
workspace = true
